OO-5788: fix some rs if user doesn't have a single curriculum